--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
@@ -93,13 +93,13 @@
 				  {{"common.inviteSettingsTitle" | translate}}
 				</a>
 				
-				<a  (click)="enableInviteLink()" class="animated-button1" style="cursor:pointer;">
+				<!-- <a  (click)="enableInviteLink()" class="animated-button1" style="cursor:pointer;">
 				  <span></span>
 				  <span></span>
 				  <span></span>
 				  <span></span>
 				  {{"common.inviteSettingsAddCustom" | translate}}
-				</a>
+				</a> -->
 			</div>
 			</div>
 		</div>
