--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.css
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.css
@@ -1,4 +1,16 @@
+.customcheck {
+float: left;
+margin-right: 10px;
+}
 
+.error {
+background-color: #FF8A8A;
+}
+
+#custom table td {
+padding:5px;
+}
+	
 .animated-button1 {
   background: linear-gradient(-30deg, #32d2fd 50%, #2485c3 50%);
   padding: 20px 20px;
@@ -141,4 +153,20 @@
 .blue-animation span:nth-child(4) {
 	 background: -webkit-gradient(linear, left top, left bottom, from(rgba(43, 8, 8, 0)), to(#0098f9)) !important;
 	    background: linear-gradient(to left, rgba(43, 8, 8, 0), #0098f9) !important;
+}
+
+:host /deep/ .e-day-wrapper .e-subject{
+	margin-top : -3px;
+}
+:host /deep/ .e-day-wrapper .e-appointment{
+	width:100% !important;
+}
+:host /deep/ .e-month-view .e-appointment{
+	width:157px !important;
+}:host /deep/ .e-schedule .e-agenda-view .e-appointment{
+	    height: 3rem;
+}:host /deep/ .e-agen{
+	position: relative;
+    top: -2rem;
+    left: 69%;
 }
