--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
@@ -126,7 +126,7 @@
 		<div class="modal-footer">
 			<div class=" mx-auto">
 				<button type="button" class="btn btn-theme-blue" style="margin-right:10px;"  (click)="closePopup()" data-dismiss="modal">Ok</button>
-				<!-- <button type="button" class="btn btn-theme-green"  (click)="navigateProfile()">Go to Profile</button> -->
+				<button type="button" class="btn btn-theme-green"  (click)="navigateProfile()">Go to Profile</button>
 			</div>
 		</div>
 	</div>
