--- a/frontend/src/app/modules/features/user/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/user/calendar/calendar.component.html
@@ -19,10 +19,10 @@
 						<a (click)="onTabChange({tabName: 'calender', tabNumber: 1})"
 			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 1}" >{{"common.calender" | translate}}</a>
 					</li>
-					<!-- <li class="nav-item">
+					<li class="nav-item">
 						<a  (click)="onTabChange({tabName: 'schedule', tabNumber: 2})"
 			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 2}" >{{"common.calenderCustom" | translate}}</a>
-					</li> -->
+					</li>
 				</ul>
 			</div>
 		</div>
