--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -184,7 +184,7 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="checkWork() && postedJobsDetails?.match_select?.work_authorization=='0'">
+			<div *ngIf="checkWork() && postedJobsDetails?.match_select?.work_authorization=='0' && checkWrkAuth === true">
 				<div class="row">
 					<div class="col-lg-4 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
