--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -5,7 +5,7 @@
       <div class="col-xl-8 col-lg-8 col-md-12 d-none d-lg-block d-xl-block pt-4 pr-5">
         <div style="position:absolute; right:5px;"><img src="assets/images/sapw-newbanner-global-img.png" class="img-fluid" ></div>
         <ul id="scene" >
-          <li class="layer" style="width:110%;z-index:1;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img.png" class="img-fluid">
+          <li class="layer" style="width:110%;z-index:1;margin-left:-3rem;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img.png" class="img-fluid">
 		  <h6 class="job-title" >{{"employer.title1" | translate }}</h6>
 		  <h6 class="job-title-content">{{"employer.title1-content" | translate }}</h6>
 		  <h6 class="job-title-content1">{{"employer.title1-content1" | translate }}</h6>
