contact form and notification changes

--- a/frontend/src/app/shared/component/contact-form/contact-form.component.html
+++ b/frontend/src/app/shared/component/contact-form/contact-form.component.html
@@ -12,7 +12,7 @@
 				</div>
 				<div class="col-lg-6 cform-img">
 					<ul class="contact-info">
-						<li class="d-flex">
+						<!--<li class="d-flex">
 							<div class="icon">
 								<i class="fas fa-map-marker-alt"></i>
 							</div> 
@@ -29,8 +29,8 @@
 								<h4>{{"contactform.phone" | translate }}</h4>
 								<span>+91-123-456-7890 <br>+91-123-456-7890</span>
 							</div>
-						</li>
-						<li class="d-flex">
+						</li>-->
+						<li class="d-flex" style="margin-left:3rem;margin-top:10rem;">
 							<div class="icon">
 								<i class="fas fa-paper-plane"></i>
 							</div>
