--- a/frontend/src/app/modules/features/common/notification/notification.component.html
+++ b/frontend/src/app/modules/features/common/notification/notification.component.html
@@ -40,7 +40,7 @@
 									{{items?.name ? items?.name : '--'}}
 								</td>-->
 								<td>
-									{{items?.created_at ? (items?.created_at | date: "MMM dd, y") : '-'}}
+									{{items?.created_at ? (items?.created_at | date: "MMM d, y, h:mm a") : '-'}}
 								</td>
 								<td>
 									<a *ngIf="items?.uname" class="primaryData" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: items?.user_id}" routerLinkActive="router-link-active"  >{{items?.uname ? items?.uname : ''}}</a>{{items?.message ? items?.message : '--'}}
