--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -19,8 +19,8 @@
   <!-- //Sub Header Section -->
 <section class="my-5">
   <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'"  >
-    <div class="row">
-      <div class="col-lg-8 col-md-8 matches-8" *ngIf="DetailsShown">
+    <div class="row" *ngIf="DetailsShown">
+      <div class="col-lg-8 col-md-8 matches-8">
         <div class="row">
           <div class="col-lg-12" >
             <app-contact-card
