--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -21,7 +21,7 @@
   <!-- //Sub Header Section -->
 <section class="my-5">
 	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container container-big'"   >
-		<div class="row">
+		<div class="row" *ngIf="loading===true">
 			<div [ngClass]="(isMultipleMatches === true)?'col-lg-4 col-md-4':'col-lg-6 col-md-6 matches-8'">
 				<div class="row">
 					<div class="col-lg-12">
