--- a/frontend/src/app/modules/features/common/notification/notification.component.html
+++ b/frontend/src/app/modules/features/common/notification/notification.component.html
@@ -43,7 +43,7 @@
 									{{items?.created_at ? (items?.created_at | date: "MMM d, y, h:mm a") : '-'}}
 								</td>
 								<td>
-									<a *ngIf="items?.uname" class="primaryData" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: items?.user_id}" routerLinkActive="router-link-active"  >{{items?.uname ? items?.uname : ''}}</a>{{items?.message ? items?.message : '--'}}
+									<a *ngIf="items?.uname" class="primaryData" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: items?.user_id,notification:true}" routerLinkActive="router-link-active"  >{{items?.uname ? items?.uname : ''}}</a>{{items?.message ? items?.message : '--'}}
 									<a *ngIf="items?.path1" class="primaryData" [routerLink]="['/user/candidate-job-view/details']" [queryParams]="{id: items?.job_id}" routerLinkActive="router-link-active"  >{{items?.path1}}</a>
 									{{items?.message1 ? items?.message1 : ''}}
 									<a *ngIf="items?.path" class="primaryData" [routerLink]="['/employer/job-detail-view', 'details']" [queryParams]="{id: items?.job_id}" routerLinkActive="router-link-active"  >{{items?.path}}</a>
