--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -41,7 +41,7 @@
                 <td class="text-capitalize">
 					<ng-container *ngIf="item?.job_locations">
                   {{item?.job_locations[0].city ? item?.job_locations[0].city + ', ' : ''}}
-                  {{item?.job_locations[0].stateshort ? item?.job_locations[0].stateshort + ' ' : ''}}
+                  {{item?.job_locations[0].countryshort ? item?.job_locations[0].countryshort + ' ' : ''}}
                  <!--  <span class="text-uppercase">
                     {{item?.job_locations[0].country ? item?.job_locations[0].country : ''}}
                   </span> -->
