--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -1066,7 +1066,7 @@
 					 </ul>
 				</div>
 			</div>
-			<div class="row  info-box" *ngIf="jobInfo?.match_select?.skills =='' && jobInfo?.skills?.length ">
+			<div class="row  info-box" *ngIf="jobInfo?.match_select?.skills =='' && jobInfo?.skills?.length  && hideknm == true">
 				<div class="col-lg-5 col-md-5 col-sm-5 caption">
 					<ul class="list-group">
 						<li class=" list-group-item text-capitalize" >{{"userProfile.knowledgeOn" | translate }}</li>
