--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -761,7 +761,7 @@
 						<div class="d-flex">
 							<div class="rdn-radio">
 								<div class="custom-control custom-radio">
-									<input type="radio"  (click)="handleChange($event)"    value="0"  id="customRadio16A" name="work_authorization" formControlName="work_authorization"  class="custom-control-input" >
+									 <input type="radio" checked="" value="0" id="customRadio16A" name="work_authorization" (click)="handleChange($event)" formcontrolname="work_authorization" class="custom-control-input ng-valid ng-dirty ng-touched ng-untouched ng-pristine" ng-reflect-value="0" ng-reflect-name="work_authorization" ng-reflect-form-control-name="work_authorization">
 									<label class="custom-control-label" for="customRadio16A">&nbsp;</label>
 								</div>
 							 </div>
