--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -767,13 +767,13 @@
 							 </div>
 							 <div class="rdn-radio">
 								<div class="custom-control custom-radio">
-									<input type="radio"  (click)="handleChange($event)"    value="1"  id="customRadio16B" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
+									<input type="radio" disabled (click)="handleChange($event)"    value="1"  id="customRadio16B" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
 									<label class="custom-control-label" for="customRadio16B">&nbsp;</label>
 								</div>
 							 </div>
 							 <div class="rdn-radio">
 								<div class="custom-control custom-radio">
-								  <input type="radio"  (click)="handleChange($event)"    value="2"  id="customRadio16C" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
+								  <input type="radio" disabled (click)="handleChange($event)"    value="2"  id="customRadio16C" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
 								  <label class="custom-control-label" for="customRadio16C">&nbsp;</label>
 								</div>
 							</div>
