--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -52,7 +52,7 @@
 					optionValueField="id"
 					optionTextField="name"
 				></ngx-select>
-				<app-control-messages [control]="f['domain']"></app-control-messages>
+				<!-- <app-control-messages [control]="f['domain']"></app-control-messages> -->
 			</div>
 		</div>
 	</div>
