--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use '~@angular/material' as mat;
 .modal-holder{
   animation-name: modal-animation;
   animation-duration: 0.3s;
