--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -76,8 +76,7 @@
 			  [maxLength]="15"  (countryChange)="onCountryChange($event)" [cssClass]="'form-control'" [preferredCountries]="preferredCountries"
 			  [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
 			  [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]" [selectFirstCountry]="false"
-			  [selectedCountryISO]="CountryISO.UnitedStates" [tooltipField]="TooltipLabel.Name"
-			  [phoneValidation]="true" [separateDialCode]="separateDialCode"
+			  [selectedCountryISO]="CountryISO.UnitedStates" [phoneValidation]="true" [separateDialCode]="separateDialCode"
 			  [numberFormat]="PhoneNumberFormat.National" name="phone" formControlName="contact">
 			</ngx-intl-tel-input>
             <!-- <input formControlName="contact" type="text" class="form-control" placeholder="+00 004 1234567"> -->
