--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.css
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.css
@@ -7,6 +7,7 @@
 }
 .mat-form-field-appearance-legacy .mat-form-field-underline {
 	background-color:#fff;
+	display: none !important ;
 }
 .mat-form-field-appearance-legacy .mat-form-field-ripple {
 	background-color:#fff;
