--- a/frontend/src/app/shared/component/contact-form/contact-form.component.html
+++ b/frontend/src/app/shared/component/contact-form/contact-form.component.html
@@ -36,7 +36,8 @@
 							</div>
 							<div class="text">
 								<h4>{{"contactform.email" | translate }}</h4>
-								<span>info@sapworld.com<br>admin@sapworld.com</span>
+								<!-- <span>info@sapworld.com<br>admin@sapworld.com</span> -->
+								<span>info@sapworld.com</span>
 							</div>
 						</li>
 					</ul>
