--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -67,8 +67,8 @@
           </div>
           <div class="form-group">
             <label>{{"shared.companyUrl" | translate}} </label>
-            <input appMarkAsterisk formControlName="website" type="text" class="form-control" placeholder="www.wipro.com">
-            <app-control-messages [control]="f['website']"></app-control-messages>
+            <input formControlName="website" type="text" class="form-control" placeholder="www.wipro.com">
+            <!-- <app-control-messages [control]="f['website']"></app-control-messages> -->
           </div>
           <div class="form-group">
             <label>{{"shared.mobileNumber" | translate}}</label>
@@ -161,7 +161,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="row mb-5">
+						<!--<div class="row mb-5">
 							<div class="col-lg-4 col-md-6">
 								<div class="d-flex">
 									<div class="linkIcon pf"><i class="fas fa-laptop-code"></i></div>
@@ -178,7 +178,7 @@
                   </label>
 								</div>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
