sendmail button loading isssue and cursor issue

--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -5,11 +5,11 @@
 				<div class="row">
 					<div class="col-lg-12 mt-3">
 						<div class="clearfix">
-							<div  *ngFor="let item of postedJobCountry; let i=index" class="alert alert-find alert-dismissible " role="alert">
+							<div  *ngFor="let item of postedJobCountry; let i=index" class="alert alert-find alert-dismissible " role="alert" style="cursor:pointer;">
 								<a style="text-transform: capitalize;color: rgb(255, 41, 114);" *ngIf="postedJobCountry.length ==1 && postedJobMeta?.visa ==0" > {{item.country}} ({{item.count}})</a>
 								<a style="text-transform: capitalize;" *ngIf="postedJobCountry.length !=1 || postedJobMeta?.visa !=0" (click)="ValidateByCountry(item.country,$event)"> {{item.country}} ({{item.count}})</a>
 							</div>
-							<div  *ngIf="postedJobMeta?.visa !=0" class="alert alert-find alert-dismissible " role="alert">
+							<div  *ngIf="postedJobMeta?.visa !=0" class="alert alert-find alert-dismissible " role="alert" style="cursor:pointer;">
 								<a style="text-transform: capitalize;" (click)="ValidateByVisa($event)" > Visa Sponsored ({{postedJobMeta?.visa}})</a>
 							</div>
 							<!-- <div  *ngIf="checkStatus(0)" class="alert alert-find alert-dismissible " role="alert">
