--- a/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
+++ b/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
@@ -123,7 +123,7 @@
 						(chartClick)="chartClickEventMatches($event)"
 						>
 					  </canvas>
-					<div class="noselect chart-center-label" style="left:72%;">{{totalMatches}}</div>
+					<div class="noselect chart-center-label">{{totalMatches}}</div>
 				</div>
 				<div class="col-lg-6 col-md-9 col-sm-9 matches-8" *ngIf="matchesTotal.length>=8 && matchesTotal.length<=21">					
 					<div class="noselect chartTitle mb-4">
