Other need not to be mandatory in skill sets

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -137,7 +137,7 @@
   <div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
 				<label >{{"userProfile.others" | translate }}</label>
-		<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>
+		<!--<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>-->
 				<mat-form-field  class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipLists aria-label="othersSkills">
