--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -65,7 +65,7 @@
 	<div class="row mt-4">	
 		<div class="col-lg-6 col-md-12">									
 			<div class=" form-group">
-				<label class="font-weight-bold" appMarkAsterisk >Languages Proficiency in</label>					 
+				<label class="font-weight-bold" appMarkAsterisk >Languages Preference</label>					 
 				<ngx-select
 				  class="text-capitalize"
 				  [placeholder]="'Select Language'"
