--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -4,6 +4,7 @@
     <div class="row">
       <div class="col-lg-5">
         <ol class="breadcrumb">
+		  <li class="breadcrumb-item" *ngIf="showBack"><a href="#" onclick="window.history.go(-1); return false;" style="cursor:pointer;" ><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
           <li class="breadcrumb-item active" aria-current="page">{{"shared.postYourJobs" | translate }}</li>
         </ol>
       </div>
