--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.css
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.css
@@ -34,3 +34,8 @@
   font-size: 18px;
   color: #a8a8a8;
 }
+image-cropper .ngx-ic-cropper{
+	width : 100% !important;
+	height : 100% !important;
+	left : 0 !important;
+}
